// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: none;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #d1d9e8;
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 400;
  max-width: 13.125rem;
}

.emotion-5 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              Async Label
              :
              <span
                className="emotion-6"
              >
                Default value
              </span>
            </span>
          </span>
          <span
            className="emotion-7"
            onClick={[Function]}
          >
            <span
              className="emotion-8"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: none;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #d1d9e8;
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 400;
  max-width: 13.125rem;
}

.emotion-5 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              Async Label
              :
              <span
                className="emotion-6"
              >
                Default value
              </span>
            </span>
          </span>
          <span
            className="emotion-7"
            onClick={[Function]}
          >
            <span
              className="emotion-8"
            />
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: none;
}

.emotion-2:hover,
.emotion-2:active {
  background-color: #d1d9e8;
  border: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 400;
  max-width: 13.125rem;
}

.emotion-5 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-6 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                you can change me
                :
                <span
                  className="emotion-6"
                >
                  Peach
                </span>
              </span>
            </span>
            <span
              className="emotion-7"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with big text 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: none;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #d1d9e8;
  border: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 400;
  max-width: 13.125rem;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      default item is a very long text that should be overflow ellipsis
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #e1ccff;
  border: none;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #c399ff;
  border: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 400;
  max-width: 13.125rem;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

.emotion-11 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
  background-color: #9f0000;
  border: solid 1px #9196be;
}

.emotion-11:hover,
.emotion-11:active {
  background-color: #d20000;
  border: solid 1px #d20000;
}

.emotion-17 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-17 path {
  fill: #fff;
}

.emotion-19 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #fff;
  background-color: #767676;
  border: none;
}

.emotion-19:hover,
.emotion-19:active {
  background-color: #5d5d5d;
  border: none;
}

.emotion-27 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: transparent;
  border: none;
}

.emotion-27:hover,
.emotion-27:active {
  background-color: #ea9cc2;
  border: none;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-11"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-17"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-19"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-17"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-27"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with style types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: none;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #d1d9e8;
  border: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 400;
  max-width: 13.125rem;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

.emotion-11 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px #9196be;
}

.emotion-11:hover,
.emotion-11:active {
  background-color: #d1d9e8;
  border: solid 1px #d1d9e8;
}

.emotion-19 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: none;
}

.emotion-19:hover,
.emotion-19:active {
  background-color: #d1d9e8;
  border: none;
}

.emotion-27 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: transparent;
  border: none;
}

.emotion-27:hover,
.emotion-27:active {
  background-color: #d1d9e8;
  border: none;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-11"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-19"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-27"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  padding: 0.5rem 1rem;
  height: 2.25rem;
  max-width: 16.875rem;
  min-width: 9.375rem;
  opacity: 1;
  border-radius: 1.5rem;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000;
  background-color: #F3F5F9;
  border: none;
}

.emotion-3:hover,
.emotion-3:active {
  background-color: #d1d9e8;
  border: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
  max-width: 16.875rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: 400;
  max-width: 13.125rem;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    Label
                    :
                    <span
                      className="emotion-7"
                    >
                      Default value
                    </span>
                  </span>
                </span>
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-9"
                  />
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
